fix: licence on mobile

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -10,7 +10,7 @@
   height: 96px;
 
   img {
-    margin-top: -8px;
+    margin-top: 2px;
     margin-left: 0px;
     scale: 1;
   }
