--- a/src/components/license/LicensesSection.module.scss
+++ b/src/components/license/LicensesSection.module.scss
@@ -29,6 +29,10 @@
       img {
         width: auto;
       }
+
+      @media (max-width: 400px) {
+        gap: 20px;
+      }
     }
   }
 
